--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
+<!-- @format -->
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>JS steriod</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <div class="container-1">
+      <h2>Challenge 1: Your Age in Days</h2>
+      <div class="flex-box-container-1">
+        <div>
+          <but class="btn btn-primary">Click me</but>ton>
+        </div>
+        <div>
+          <button class="btn btn-danger">Reset</button>
+        </div>
+      </div>
+      <div class="flex-box-container-1">
+          <div id="flex-box-result">
+              
+          </div>
+      </div>
+    </div>
     <!-- Linking HTML file to JS file -->
     <script src="static/js/script.js"></script>
-</body>
+  </body>
 </html>
