--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Challenge 1: Your Age in Days</h2>
       <div class="flex-box-container-1">
         <div>
-          <but class="btn btn-primary">Click me</but>ton>
+          <button class="btn btn-primary" onclick="ageInDays()">Click me</button>
         </div>
         <div>
           <button class="btn btn-danger">Reset</button>
