--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button class="btn btn-primary" onclick="ageInDays()">Click me</button>
         </div>
         <div>
-          <button class="btn btn-danger">Reset</button>
+          <button class="btn btn-danger" onclick="reset()">Reset</button>
         </div>
       </div>
       <div class="flex-box-container-1">
