challenge 2:Creating a cat generator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
           </div>
       </div>
     </div>
+
+    <!-- Challenge 2: Create a cat generator -->
+    <div class="container-2">
+        <h2>Challenge 2: Cat Generator</h2>
+        <button class="btn btn-success">Generate Cat</button>
+        <div class="flex-box-container-2"></div>
+    </div>
     <!-- Linking HTML file to JS file -->
     <script src="static/js/script.js"></script>
   </body>
 </html>
+<!-- 0055259508 -->
