adding random cat pictures

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <div class="container-2">
         <h2>Challenge 2: Cat Generator</h2>
         <button class="btn btn-success">Generate Cat</button>
-        <div class="flex-box-container-2"></div>
+        <div class="flex-box-container-2">
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+        </div>
     </div>
     <!-- Linking HTML file to JS file -->
     <script src="static/js/script.js"></script>
