finish adding the random cat generator functionalities

--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
     <!-- Challenge 2: Create a cat generator -->
     <div class="container-2">
         <h2>Challenge 2: Cat Generator</h2>
-        <button class="btn btn-success">Generate Cat</button>
-        <div class="flex-box-container-2">
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
-            <img src="http://thecatapi.com/api/images/get?format=src&type=gif" />
+        <button class="btn btn-success" onclick="generateCat()">Generate</button>
+        <div class="flex-box-container-2" id="flex-cat-gen">
         </div>
     </div>
     <!-- Linking HTML file to JS file -->
