--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Challenge 3: Rock, Papper, Scissors</h2>
         <div class="flex-box-rps" id="flex-box-rps-div">
             <img id="rock" src="https://media.istockphoto.com/photos/big-stone-in-the-garden-at-edge-the-water-picture-id680021982?s=612x612" height="150" width="150" alt="" onclick="rpsGame(this)" />
-            <img id="papper" src="https://images.unsplash.com/photo-1603484477859-abe6a73f9366?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGFwZXJ8ZW58MHx8MHx8&w=1000&q=80" height="150" width="150"  alt="" onclick="rpsGame(this)" />
+            <img id="paper" src="https://images.unsplash.com/photo-1603484477859-abe6a73f9366?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGFwZXJ8ZW58MHx8MHx8&w=1000&q=80" height="150" width="150"  alt="" onclick="rpsGame(this)" />
             <img id="scissors" src="https://img.favpng.com/0/21/18/hand-finger-scissors-clip-art-png-favpng-qrvWvKJipPufMfVRMUvhZgkpe.jpg" height="150" width="150"  alt="" onclick="rpsGame(this)" />
         </div>
     </div>
