updating HTML for color changer

--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
             <img id="scissors" src="https://img.favpng.com/0/21/18/hand-finger-scissors-clip-art-png-favpng-qrvWvKJipPufMfVRMUvhZgkpe.jpg" height="150" width="150"  alt="" onclick="rpsGame(this)" />
         </div>
     </div>
+
+    <!-- Challenge 4: Change the color of all buttons -->
+    <div class="container-4">
+        <h2 id="change-my-color">Challenge 4: change the color of all button</h2>
+        <div class="flex-box-pick-color">
+            <form action="">
+                <select name="backdrop" id="background" onchange="buttonColorChange(this)">
+                    <option value="random">Random</option>
+                    <option value="red">red</option>
+                    <option value="green">green</option>
+                    <option value="reset">reset</option>
+                </select>
+            </form>
+            <button class="btn btn-primary">Wee!</button>
+            <button class="btn btn-danger">Yahoo!</button>
+            <button class="btn btn-warning">Google!</button>
+            <button class="btn btn-success">Facebook!</button>
+        </div>
+    </div>
     <!-- Linking HTML file to JS file -->
     <script src="static/js/script.js"></script>
   </body>
