--- a/index.html
+++ b/index.html
@@ -66,6 +66,41 @@
             <button class="btn btn-success">Facebook!</button>
         </div>
     </div>
+
+    <!-- Challenge 5: Black Jack (HTML) -->
+    <div class="container-5">
+        <h2>Challenge 5: BlackJack</h2>
+        <h3><span id="blackjack-result">Let's play</span></h3>
+        <div class="flex-blackjack-row-1">
+            <div id="your-id">
+                <h2>You: <span id="your-blackjack-result">0</span></h2>
+            </div>
+            <span id="dealer-box">
+                <h2>Dealer: <span id="dealer-blackjack-result"> 0</span></h2>
+            </span>
+        </div>
+        <div class="flex-blackjack-row-2">
+            <div>
+                <button class="btn-lg mr-2  btn-primary" id="blackjack-hit-button">Hit</button>
+                <button class="btn-lg mr-2  btn-warning" id="blackjack-stand-button">Stand</button>
+                <button class="btn-lg mr-2  btn-danger" id="blackjack-deal-button">Deal</button>
+            </div>
+        </div>
+        <div class="flex-blackjack-row-3">
+            <table>
+                <tr>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Draw</th>
+                </tr>
+                <tr>
+                    <td><span id="wins">0</span></td>
+                    <td><span id="losses">0</span></td>
+                    <td><span id="draws">0</span></td>
+                </span0<>
+            </table>
+        </div>
+    </div>
     <!-- Linking HTML file to JS file -->
     <script src="static/js/script.js"></script>
   </body>
