Challeng 5: BlackJack (CSS) completed.

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <div id="your-id">
                 <h2>You: <span id="your-blackjack-result">0</span></h2>
             </div>
-            <span id="dealer-box">
+            <div id="dealer-box">
                 <h2>Dealer: <span id="dealer-blackjack-result"> 0</span></h2>
-            </span>
+            </div>
         </div>
         <div class="flex-blackjack-row-2">
             <div>
