--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h2>Challenge 5: BlackJack</h2>
         <h3><span id="blackjack-result">Let's play</span></h3>
         <div class="flex-blackjack-row-1">
-            <div id="your-id">
+            <div id="your-box">
                 <h2>You: <span id="your-blackjack-result">0</span></h2>
             </div>
             <div id="dealer-box">
